# glow-brain

./: .gitignore  .gitmodules  CLAUDE.md  README.md  SPY×FAMILY_マスタデータレポート.md
.ai-context/prompts/: マスターデータテーブル調査プロンプト.md  施策マスタデータ作成ガイド.md  運営仕様書からマスタデータ作成の手順書.md  運用仕様書マスタデータ作成ガイド.md
.claude/: settings.json
.claude/agents/: content-masterdata-generator.md  pln-input-guide.md  screen-doc-creator.md
.claude/disable-skills/: MASTERDATA.md
.claude/docs/: session-log-structure.md  skills-best-practices.md  subagent-best-practices.md
.claude/hooks/: jsonl-to-md.sh  save-session.sh
.claude/plans/: Slack Claude Bot セッション監視CLIツール 計画書.md  Slack-Claude Code連携システム 実装計画.md  Slack-Claude連携_ローカル検証版.md  (+2 more)
.github/: copilot-instructions.md
checklists/: bizops-specs-checklist.md
config/: table_dependencies.json  versions.json
docs/: database-tables-analysis-stage-quest-ingame.md  master_table_implementation_relations.md  master_table_relations.md
domain/: README.md
domain/tools/clickup/: .env.example  README.md  clickup-api-rate-limits.md  pyproject.toml
domain/tools/clickup/scripts/: README.md  generate_task_duration_csv.sh  generate_task_duration_csv_batch.sh
domain/tools/clickup/src/clickup_tools/: __init__.py
domain/tools/clickup/src/clickup_tools/common/: __init__.py  client.py  config.py  file_utils.py  markdown.py  models.py  task_fetcher.py  task_filter.py  url_parser.py
domain/tools/clickup/src/clickup_tools/exporters/: __init__.py
domain/tools/clickup/src/clickup_tools/exporters/list_closed_exporter/: __init__.py  __main__.py  exporter.py  main.py
domain/tools/clickup/src/clickup_tools/exporters/list_exporter/: __init__.py  exporter.py  main.py
domain/tools/clickup/src/clickup_tools/exporters/space_structure_exporter/: __init__.py  __main__.py  exporter.py  main.py
domain/tools/google-drive/gspread-to-xlsx/: .gitignore  README.md  credentials.json.example  gspread_to_xlsx.py  pyproject.toml  requirements.txt
domain/tools/masterdata-entry/scripts/: README.md  pyproject.toml
scripts/: README.md  bundle-for-gemini.sh  create-version-branches.sh  filter_master_tables_schema.py  parse_sequence_html.py  setup.sh  xlsx_to_csv.py
scripts/download_masterdata_design_docs/: .gitignore  README.md  README_OAUTH.md  UV_GUIDE.md  VENV_GUIDE.md  credentials.json.example  download_masterdata_design_docs.py  download_masterdata_design_docs_oauth.py  pyproject.toml  requirements.txt
slack-claude-bot/: .env.example  .gitignore  ENV_SETUP_GUIDE.md  QUICKSTART.md  README.md  SETUP.md  pyproject.toml
slack-claude-bot/config/: agents.json
slack-claude-bot/src/: config.py  main.py
slack-claude-bot/src/claude/: executor.py
slack-claude-bot/src/github/: pr_manager.py
slack-claude-bot/src/session/: db.py  manager.py
slack-claude-bot/src/slack/: bot.py  command_handlers.py  handlers.py  session_handler.py  views.py
slack-claude-bot/src/worktree/: manager.py
specs/: Normalクエスト_Normal難易度_インゲーム敵設定_詳細仕様書.md
マスタデータ/: GLOW_ID 管理.xlsx
(+19253 files in other folders)
