[project]
name = "slack-claude-bot"
version = "0.1.0"
description = "Slack-Claude Code integration bot (local verification version)"
requires-python = ">=3.11"
dependencies = [
    # Slack
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.26.0",

    # Async & Process Management
    "aiohttp>=3.9.0",
    "pexpect>=4.9.0",

    # Utils
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
