[project]
name = "glow-masterdata-downloader"
version = "0.1.0"
description = "GLOWマスタデータ設計書ダウンローダー - Googleスプレッドシートから設計書をHTML形式でダウンロード"
requires-python = ">=3.8"
dependencies = [
    "google-auth==2.27.0",
    "google-auth-oauthlib==1.2.0",
    "google-api-python-client==2.115.0",
    "requests==2.31.0",
    "GitPython==3.1.41",
    "python-dotenv==1.0.0",
]

[project.scripts]
download-masterdata-docs = "download_masterdata_design_docs:main"
