[project]
name = "download-masterdata-docs"
version = "1.0.0"
description = "データQAまとめからマスタデータ書一括ダウンロードスクリプト"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client==2.111.0",
    "google-auth==2.26.2",
    "google-auth-oauthlib==1.2.0",
    "gspread==5.12.3",
    "requests==2.31.0",
]

[project.scripts]
download-masterdata-docs = "download_masterdata_docs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
